<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_Filter_Current_Hexapod_Robot_Input" Id="{43428ddf-1a61-4b6d-ab5c-19d637c6725e}">
    <Declaration><![CDATA[TYPE ST_Filter_Current_Hexapod_Robot_Input :
STRUCT
	Current_Motor: matrix_18_real_T;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>