<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_Tough_Signal_Detection_Simple_Input" Id="{cdf3a516-4c89-449d-ae71-ecfdce00e425}">
    <Declaration><![CDATA[TYPE ST_Tough_Signal_Detection_Simple_Input :
STRUCT
	Current_Filter: matrix_18_real_T;
	Delay_Time: LREAL;
	Minimum_Limit: LREAL;
	State: LREAL;
	Number: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>